import org.springframework.boot.gradle.plugin.SpringBootPlugin

repositories {
    maven {
        url = 'https://pkgs.dev.azure.com/hmcts/Artifacts/_packaging/hmcts-lib/maven/v1'
    }
}

dependencies {
    api platform('org.springframework.cloud:spring-cloud-dependencies:2024.0.3')
    implementation platform(SpringBootPlugin.BOM_COORDINATES)
    implementation project(':ccd-config-generator')
    // A filtered set of useful CCD POJOs including DTOs and other utilities.
    implementation ('com.github.hmcts.rse-cft-lib:ccd-lib:0.19.2186') {
        transitive = false
    }
    implementation group: 'org.springframework.boot', name: 'spring-boot-starter-web'
    implementation group: 'org.springframework.boot', name: 'spring-boot-starter-jdbc'
    api 'org.springframework.cloud:spring-cloud-starter-openfeign'
    api 'com.github.hmcts:service-auth-provider-java-client:5.3.4'
    implementation 'org.flywaydb:flyway-core'
    implementation('com.github.hmcts:idam-java-client:3.0.5') {
        transitive = false
    }
    implementation 'com.github.hmcts:ccd-case-document-am-client:1.59.2'
    implementation 'com.github.hmcts:service-auth-provider-java-client:5.3.4'
    implementation group: 'com.github.ben-manes.caffeine', name: 'caffeine'
    compileOnly 'org.projectlombok:lombok:1.18.46'

    annotationProcessor 'org.projectlombok:lombok:1.18.46'

    implementation "org.springframework.boot:spring-boot-autoconfigure"
    runtimeOnly 'org.flywaydb:flyway-database-postgresql'
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation group: 'org.testcontainers', name: 'testcontainers'
    testImplementation group: 'org.testcontainers', name: 'junit-jupiter'
    testImplementation group: 'org.testcontainers', name: 'postgresql'
    runtimeOnly 'org.postgresql:postgresql'
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

tasks.withType(Test).configureEach {
    useJUnitPlatform()
    [
        'ccd.data-migration.perf.cases',
        'ccd.data-migration.perf.events-per-case',
        'ccd.data-migration.perf.event-id-window-size',
        'ccd.data-migration.perf.max-seconds'
    ].each { propertyName ->
        def propertyValue = System.getProperty(propertyName)
        if (propertyValue != null) {
            systemProperty propertyName, propertyValue
        }
    }
}

tasks.register('checkMigrationImmutability') {
    group = 'verification'
    description = 'Fails if existing decentralised runtime database migrations are modified, deleted, or renamed'

    doLast {
        def stdout = new ByteArrayOutputStream()
        exec {
            commandLine 'git', 'diff', '--name-status', '--find-renames', '--diff-filter=MDR',
                'origin/master...HEAD', '--',
                ':(top)sdk/decentralised-runtime/src/main/resources/dataruntime-db/migration/V*.sql'
            standardOutput = stdout
        }

        def changedExistingMigrations = stdout.toString('UTF-8').readLines().findAll { it.trim() }

        if (!changedExistingMigrations.isEmpty()) {
            throw new GradleException(
                "Existing decentralised runtime database migrations must not be modified, deleted, or renamed. "
                    + "Add a new migration instead.\n\n"
                    + changedExistingMigrations.join('\n')
            )
        }
    }
}

tasks.named('check') {
    dependsOn tasks.named('checkMigrationImmutability')
}
